src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');

@layer utilities{
    .card-shadow{
      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    }

    .scrollBarContainer::-webkit-scrollbar {
        position: absolute;
        background-color: transparent;
        width: 6px;
    }

    .scrollBarContainer.animate::-webkit-scrollbar {
        transition: 2s opacity ease;
        -ms-transition: 2s opacity ease;
        opacity: 0;
    }

    .scrollBarContainer.animate::-webkit-scrollbar-thumb {
      background-color: rgb(153, 153, 153);    /* color of the scroll thumb */
      border-radius: 20px;       /* roundness of the scroll thumb */
      border: rgb(153, 153, 153);  /* creates padding around scroll thumb */
    }
   
}

body{
    overflow-x: hidden;
}

.anton{
    font-family: 'Anton', sans-serif;
}

.img-blur{
  -webkit-backdrop-filter: blur(20px);
  backdrop-filter: blur(20px);
}

.blur-comp::before{
  content:"";
  position:absolute;
  z-index:-1;
  -webkit-backdrop-filter: blur(80px);
  backdrop-filter: blur(80px);
  top:0;
  left:0;
  right:0;
  bottom:0;
}

.blur-comp-after::after{
  content:"";
  position:absolute;
  z-index: 4;
  -webkit-backdrop-filter: blur(80px);
  backdrop-filter: blur(80px);
  top:0;
  left:0;
  right:0;
  bottom:0;
}

